# SelectedTextTranslateE

./: .eslintrc.cjs  .gitignore  .prettierrc  .travis.yml  Cargo.toml  README.MD  Selected Text Translate - Dev.lnk  eslint.config.js  index.html  main.ts  package-lock.json  package.json  pnpm-lock.yaml  supabase.ts  test.html  tests.txt  tsconfig.json  tslint.json  vite.config.ts
.github/workflows/: build.yml
app/: tsconfig.json
app/src/: main.ts
build-scripts/: before-bundle.mjs  build-native.js  create-installer.js  package.config.js  package.js  webpack.main.js  webpack.renderer.js  webpack.service-renderer.js
build-scripts/resources/: production-settings.json
electron/: index.html  main.ts
firebase/: firestore.indexes.json  firestore.rules
firebase/migrator/: README.md  index.ts  package.json  tsconfig.json
firebase/public/: 404.html  reset-code.html
firebase/public/styles/: styles.css
main/: main.ts  tsconfig.json
renderer/src/: index.html
src/: app.scss  app.store.ts  app.vue  error-handler.ts  filters.ts  fontawesome-icons.ts  languages.json  main.ts  preload.ts  router.ts
src-tauri/: Cargo.toml  dev.default-settings.json  tauri.conf.json
src-tauri-macros/: Cargo.toml
src-tauri-macros/src/: lib.rs
src-tauri/capabilities/: default.json
src-tauri/resources/: default-settings.json  default_settings.json
src-tauri/src/: accent_color_provider.rs  commands.rs  events.rs  events_manager.rs  main.rs  notifications.rs  requests_executor.rs  shortcuts_manager.rs  text_extractor.rs  tray_icon.rs  window_manager.rs
src-tauri/src/settings/: default-settings.json  mod.rs  settings_manager.rs
src/common/: ViewNames.ts
src/common/dto/: UserInfo.ts
src/css/: common.scss  framework.scss  reset.scss
src/directives/: auto-focus.directive.ts  callbacks-registry.ts  click-outside.directive.ts  focus-lost.directive.ts  overflow-tooltip.directive.ts  tab-guard.directive.ts
src/firebase/: .firebaserc  firestore.indexes.json
src/host/: host-api.service.ts
src/main/: Application.ts  RendererLocationProvider.ts  app.ts  default-settings.json  installer.ts  inversify.config.ts  languages.json  main.ts  tsconfig.json
src/renderer/: index.html  index.ts  root.store.ts  router.ts  tsconfig.json
src/service-renderer/: index.html  index.ts  tsconfig.json
src/services/: hotkeys-registry.service.ts  logger.service.ts  settings-provider.service.ts  supabase-provider.service.ts
src/typings/: file-shims.d.ts  global-components.d.ts  renderer.d.ts  tinykeys.d.ts  vuejs-paginate-next.d.ts
src/utils/: collection.utils.ts  date.utils.ts  error-handling.utils.ts  index.ts  logging.utils.ts  object.utils.ts  tags.utils.ts
supabase/: config.toml
supabase/email-templates/: otp.template.html
supabase/firebase-migrator/: README.md  index.ts  package.json  pnpm-lock.yaml  tsconfig.json
supabase/migrations/: 20240704203138_initial.sql
(+569 files in other folders)
