[package]
name = "selected-text-translate"
version = "0.0.0"
description = "Selected Text Translate"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }

[dependencies]
selected-text-translate-macros = { path = "../src-tauri-macros" }
tauri = { version = "2.0.0-beta", features = ["tray-icon", "image-ico"] }
tauri-plugin-shell = "2.0.0-beta"
tauri-plugin-log = "2.0.0-beta"
tauri-plugin-notification = "2.0.0-beta"
tauri-plugin-single-instance = "2.0.0-beta"
tauri-plugin-global-shortcut = "2.0.0-beta"
tauri-plugin-clipboard-manager = "2.1.0-beta"
tauri-plugin-autostart = "2.0.0-beta"
windows = "0.56.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = "3.8.1"
hex = "0.4.3"
log = "^0.4"
global-hotkey = "0.5.4"
reqwest = "0.12"

